--- a/lead-ols.Rmd
+++ b/lead-ols.Rmd
@@ -112,7 +112,8 @@ summary(f, ld73=c(20, 40))  # effect of changing ld73 from 20 to 40
 ```
 There is a `plot` method for `summary` results.  By default it
 shows 0.9, 0.95, and 0.99 confidence limits.
-```{r plotsummary}
+```{r plotsummary,top=2}
+# top=2 in chunk header: leave extra room for labels
 plot(summary(f))
 ```
 
