added headers for all scripts

--- a/descriptives.Rmd
+++ b/descriptives.Rmd
@@ -6,7 +6,7 @@ output:
   html_document:
     highlight: pygments
     toc: yes
-
+major: descriptive statistics; graphics
 ---
 # Data Description and Univariable Statistics
 ```{r contents,results='asis'}
