--- a/lead-ols.Rmd
+++ b/lead-ols.Rmd
@@ -6,6 +6,8 @@ output:
   html_document:
     highlight: pygments
     toc: yes
+major: regression modeling
+minor: ordinary least squares
 
 ---
 # Data Description
