--- a/abd17-28.Rmd
+++ b/abd17-28.Rmd
@@ -45,15 +45,29 @@ d <- upData(d, labels=c(species = 'Species', mass='Brain Mass',
 							 units=c(mass='g'))
 ```
 Raw data are logging x then logging both x and y.
-```{r show}
+```{r show,h=4}
 contents(d)
 d    # same as print(d)
-ggplot(d, aes(x=mass, y=ratio)) + geom_point() +
-  geom_text(aes(label=species), size=2, hjust=1.1) + 
-  scale_x_log10(breaks=c(10,25,50,100,200,500,1000))
-ggplot(d, aes(x=mass, y=ratio)) + geom_point() +
-  geom_text(aes(label=species), size=2, hjust=1.1) + 
-  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) + scale_y_log10(breaks=c(.25,.5,.75,1,1.25,1.5,2))
+
+# Function to form 2-letter versions of species names using
+# first letter of each word
+w <- function(x) {
+   x <- strsplit(as.character(x), split=' ')
+	 sapply(x, function(y) paste(substring(y, 1, 1), collapse=''))
+	 }
+
+ggplot(d, aes(x=mass, y=ratio, color=species)) + geom_point() +
+  geom_text(aes(label=w(species)), size=2, hjust=1.2) + 
+  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) +
+  guides(col=guide_legend(nrow=4, override.aes=list(size=1))) +
+  theme(legend.position='bottom', legend.text=element_text(size=4),
+	      legend.key.size=unit(2, 'mm'))
+
+ggplot(d, aes(x=mass, y=ratio, color=species)) + geom_point() +
+  geom_text(aes(label=w(species)), size=2, hjust=1.2) + 
+  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) +
+	scale_y_log10(breaks=c(.25,.5,.75,1,1.25,1.5,2)) +
+	theme(legend.position='none')
 
 dd <- datadist(d); options(datadist='dd')
 ```
