--- a/abd17-28.Rmd
+++ b/abd17-28.Rmd
@@ -11,6 +11,7 @@ minor: ordinary least squares
 ---
 
 # Data
+The data are from Sherwood, C. C., _et al_. 2006. _Proceedings of the National Academy of Sciences (USA)_ **103**: 13606–13611.
 ```{r setup}
 require(rms)
 knitrSet(lang='markdown')
@@ -43,6 +44,8 @@ close(data)
 d <- upData(d, labels=c(species = 'Species', mass='Brain Mass',
                         ratio   = 'Glia-neuron Ratio'),
 							 units=c(mass='g'))
+xl <- label(d$mass, plot=TRUE, units=TRUE)
+yl <- label(d$ratio)
 ```
 Raw data are logging x then logging both x and y.
 ```{r show,h=4}
@@ -57,15 +60,15 @@ w <- function(x) {
 	 }
 
 ggplot(d, aes(x=mass, y=ratio, color=species)) + geom_point() +
-  geom_text(aes(label=w(species)), size=2, hjust=1.2) + 
-  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) +
+  geom_text(aes(label=w(species)), size=2, hjust=1.3) + 
+  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) + xlab(xl) + ylab(yl) +
   guides(col=guide_legend(nrow=4, override.aes=list(size=1))) +
   theme(legend.position='bottom', legend.text=element_text(size=4),
 	      legend.key.size=unit(2, 'mm'))
 
 ggplot(d, aes(x=mass, y=ratio, color=species)) + geom_point() +
-  geom_text(aes(label=w(species)), size=2, hjust=1.2) + 
-  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) +
+  geom_text(aes(label=w(species)), size=2, hjust=1.3) + 
+  scale_x_log10(breaks=c(10,25,50,100,200,500,1000)) + xlab(xl) + ylab(yl) +
 	scale_y_log10(breaks=c(.25,.5,.75,1,1.25,1.5,2)) +
 	theme(legend.position='none')
 
@@ -77,7 +80,7 @@ Note that it is unusual not to log a ratio, but the preliminary analysis in ABD 
 ```{r fit}
 f <- ols(ratio ~ log(mass), data=d, subset=species != 'homo sapiens')
 f
-ggplot(Predict(f, mass=seq(10, 1400, by=25))) +
+ggplot(Predict(f, mass=seq(10, 1400, by=25)), ylab=yl) +
   geom_point(aes(x=mass, y=ratio), data=d)
 ```
 
