--- a/rms2-fev.Rmd
+++ b/rms2-fev.Rmd
@@ -1,89 +1,92 @@
 ---
-title: "RMS Chapter 2 Example: Analysis of FEV Dataset"
+title: 'RMS Chapter 2 Example: Analysis of FEV Dataset'
 author: "Frank Harrell"
-date: "`r Sys.Date()`"
+date: '`r Sys.Date()`'
 output:
-  html_document:
-    highlight: pygments
-    toc: yes
-major: regression modeling; rms
+  html_notebook:
+    highlight: textmate
+    toc: true
+    toc_float:
+      collapsed: true
 minor: curve fitting
+major: regression modeling; rms
 ---
-```{r setup}
+```{r setup,results='hide'}
 require(Hmisc)
 knitrSet(lang='markdown')
 ```
 # Descriptive Statistics
-```{r importdesc,w=7,h=6}
+```{r importdesc,w=7,h=6,results='asis'}
 require(rms)
 getHdata(FEV)
-contents(FEV)
-describe(FEV)
-ggplot(FEV, aes(x=age, y=fev, color=height)) + geom_point() + facet_grid(smoke ~ sex)
+html(contents(FEV), file='')
+options(grType='plotly')  # use plotly interactive graphics
+plot(describe(FEV))
+require(plotly, quietly=TRUE)
+ggplotly(ggplot(FEV, aes(x=age, y=fev, color=height)) + geom_point() + facet_grid(smoke ~ sex))
 dd <- datadist(FEV); options(datadist='dd')
-dd
+htmlVerbatim(dd)    # in Hmisc package
 ```
 
 # Regression Models of Increasing Complexity
 FEV is log-transformed to satisfy normality and equal variance assumptions.
 
 ## Single Predictor, Linear Effect
-```{r lin,w=6.5,mfrow=c(1,2)}
+```{r lin,w=6.5,mfrow=c(1,2),results='asis'}
 f <- ols(log(fev) ~ age, data=FEV)
-f
+print(f, md=TRUE)
 r <- as.numeric(resid(f))
 with(FEV, plot(age, r))
 qqnorm(r)
 qqline(r)
 ```
-```{r linplot}
-
+```{r linplot,results='asis'}
 # Show algebraic form of fitted model
-Function(f)
 g <- Function(f)
-exp(g()); exp(g(age=10))   # Evaluate the fitted model, antilog to get original scale
-ggplot(Predict(f)) + geom_point(aes(x=age, y=log(fev), color=sex), FEV)
+htmlVerbatim(g, exp(g()), exp(g(age=10)))   # Evaluate the fitted model, antilog to get original scale
+latex(f, md=TRUE)
+ggplot(Predict(f), addlayer=geom_point(aes(x=age, y=log(fev), color=sex), FEV))
 ```
 
 ## Restricted Cubic Spline With 3 Default Knots
 The knots are at these quantiles of age: 0.1, 0.5, 0.9.
-```{r rcs3}
+```{r rcs3,results='asis'}
 f <- ols(log(fev) ~ rcs(age, 3), data=FEV, x=TRUE)
-f
+print(f, md=TRUE)
 g <- Function(f)
-g(10:20)
-g()
-g
+htmlVerbatim(g(10:20), g(), g)
 ggplot(Predict(f))
-anova(f)
+ha <- function(f) html(anova(f), dec.ms=2, dec.ss=2)
+ha(f)
 ```
 
 ## RCS With 5 Default Knots
-```{r rcs5}
+```{r rcs5,results='asis'}
 f <- ols(log(fev) ~ rcs(age, 5), data=FEV)
-f
+print(f, md=TRUE)
 Function(f)
-anova(f)
+ha(f)
 ggplot(Predict(f))
 ```
 
 ## RCS with 5 Knots, Additive (Non-Interacting) Sex Effect
-```{r rcs5sex,w=5}
+```{r rcs5sex,w=5,results='asis'}
 f <- ols(log(fev) ~ rcs(age, 5) + sex, data=FEV)
 Function(f)
-anova(f)
-ggplot(Predict(f, age, sex)) + geom_point(aes(x=age, y=log(fev), color=sex), FEV)
+ha(f)
+ggplot(Predict(f, age, sex),
+       addlayer=geom_point(aes(x=age, y=log(fev), color=sex), FEV))
 ```
 
 ## RCS in Age Interacting With Sex
 The following model allows for different shapes of effects for males and females.
-```{r rcsia,mfrow=c(1,2),w=6.5}
+```{r rcsia,mfrow=c(1,2),w=6.5,results='asis'}
 f <- ols(log(fev) ~ rcs(age, 5) * sex, data=FEV)
 r <- as.numeric(resid(f))
 plot(fitted(f), r)
 qqnorm(r); qqline(r)
 Function(f)
-anova(f)
+ha(f)
 ```
 ```{r rcsiap}
 ggplot(Predict(f, age, sex))
@@ -95,10 +98,22 @@ ggplot(Predict(f, age, sex, fun=exp), ylab='Estimated Median FEV')
 
 ## RCS with Age * Sex and Additive Nonlinear Effect of Height
 We show the joint age and height effects using a color image plot
-```{r rcsiah}
+```{r rcsiah,results='asis'}
 f <- ols(log(fev) ~ rcs(age, 5) * sex + rcs(height, 5), data=FEV)
-anova(f)
-bplot(Predict(f, age, height))
+ha(f)
+ggplot(Predict(f, age, sex), adj.subtitle=FALSE)
+```
+```{r rcsbplot}
+p <- Predict(f, age, height)
+bplot(p)
+```
+```{r rcspl1}
+p <- with(p, list(age=unique(age), height=unique(height),
+                  Yhat=matrix(yhat, ncol=200)))
+plot_ly(p, x=age, y=height, z=Yhat, type='heatmap')
+```
+```{r rcspl2}
+plot_ly(p, x=age, y=height, z=Yhat, type='surface')
 ```
 
 ## Model Ignoring Sex and Height But Including Smoking History
