--- a/stressecho.qmd
+++ b/stressecho.qmd
@@ -18,12 +18,12 @@ execute:
 
 ## Introduction
 
-This report reads an existing R dataset (officially a "data frame") and makes various descriptive summaries, packaging text, code, and output into an html file.  Some of the graphics are rendered both as static and as interactive graphs.  The interactive ones allow you to pan, zoom, and hover with the mouse to see more details.  Interactive graphics are constructed using the R `plotly` package, which the `Hmisc` package loads automatically.  To run this report you'll need to install the `Hmisc` and `plotly` packages and their dependencies (`RStudio` will take care of the dependencies).
+ This report reads an existing R dataset (officially a "data frame") and makes various descriptive summaries, packaging text, code, and output into an html file.  Some of the graphics are rendered both as static and as interactive graphs.  The interactive ones allow you to pan, zoom, and hover with the mouse to see more details.  Interactive graphics are constructed using the R `plotly` package, which the `Hmisc` package loads automatically.  To run this report you'll need to install the `Hmisc` and `plotly` packages and their dependencies (`RStudio` will take care of the dependencies).
 
 ## Loading User-Contributed R Packages
 
 In R a _package_ is a collection of functions, function documentation ("help files"), and example datasets.
-When you install R and `RStudio` many standard packages are automatically installed.  There are over 10,000 user-contributed packages that extend what R can do.  These include specialty packages for biomedical research (e.g., flow cytometry analysis, genomics, interfaces to REDCap) and a huge number of packages for analysis, table making, and graphics.  After using the `RStudio` `Tools` menu to install add-on packages, you load packages into R to make them available when running your report by using the `require` or `library` command.  In the following we get access to the [`Hmisc` package](https://hbiostat.org/R/Hmisc).
+When you install R and `RStudio` many standard packages are automatically installed.  There are over 10,000 user-contributed packages that extend what R can do.  These include specialty packages for biomedical research (e.g., flow cytometry analysis, genomics, interfaces to REDCap) and a huge number of packages for analysis, table making, and graphics.  After using the `RStudio` `Tools` menu to install add-on packages, you load packages into R to make them available when running your report by using `require` or `library` commands.  In the following we get access to the [`Hmisc` package](https://hbiostat.org/R/Hmisc).
 
 ```{r setup}
 require(Hmisc)   # Hmisc must already be installed
@@ -33,7 +33,7 @@ If you installed `Hmisc` after 2022-08-15 you can load this complete report scri
 
 ## Accessing Data
 
-There are many ways to import data into R, as described [here](https://hbiostat.org/rflow/fcreate.html).  Much of the time you will be importing `.csv` or `REDCap` files or binary files created by `Stata`, `SPSS`, or `SAS`.  For learning R there is a wide variety of ready-to-use datasets on the Vanderbilt Department of Biostatistics dataset repository at [hbiostat.org/data](https://hbiostat.org/data).  These datasets are already in R binary format and many of them are fully documented and annotated.  In the R `Hmisc` package there is a function `getHdata` that finds these datasets, downloads them from the web server, and loads them into R's memory for easy access.
+There are many ways to import data into R, as described [here](https://hbiostat.org/rflow/fcreate.html).  Much of the time you will be importing `.csv` or `REDCap` files or binary files created by `Stata`, `SPSS`, or `SAS`.  For learning R there is a wide variety of ready-to-use datasets on the Vanderbilt Department of Biostatistics dataset repository at [hbiostat.org/data](https://hbiostat.org/data).  These datasets are already in R binary format and many of them are fully documented and annotated.  In the `Hmisc` package there is a function `getHdata` that finds these datasets, downloads them from the web server, and loads them into R's memory for easy access.
 
 Use the`getHdata` function to download the [stress echocardiogram dataset](https://hbiostat.org/data/repo/stressEcho.html) and read it into R's memory.  This dataset is annotated with variable labels and, for continuous variables, units of measurement.  These annotations are used by `contents`, `describe`, and certain graphics functions.
 
@@ -52,9 +52,11 @@ The names of variables in the stress echo dataset can be printed by using the co
 html(contents(d))
 ```
 
+In the main output you'll find that the number of levels for categorical variables (R `factor` variables) are highlighted.   These are hyperlinks, and if you click on the number the pointer will jump to the list of levels below.
+
 ## Descriptive Statistics
 
-The `Hmisc` package `describe` function produces appropriate descriptive statistics for each variable depending on the variable's nature (binary, categorical, continuous, etc.). [See [this](https://hbiostat.org/R/glossary.html) for definitions of some of the items in `describe` output.]{.aside}  If you just type `describe(d)` you'll get plain text output with no graphics.  Running the output of `describe` through the `html` function converts it to html format which contains small graphics files to render high-resolution spike histograms for continuous variables.
+The `Hmisc` package `describe` function produces appropriate descriptive statistics for each variable in a data frame depending on the variable's nature (binary, categorical, continuous, etc.). [See [this](https://hbiostat.org/R/glossary.html) for definitions of some of the items in `describe` output.]{.aside}  If you just type `describe(d)` you'll get plain text output with no graphics.  Running the output of `describe` through the `html` function converts it to html format which contains small graphics files to render high-resolution spike histograms for continuous variables.
 
 ```{r results='asis'}
 des <- describe(d)   # store results of describe() in des
@@ -103,3 +105,4 @@ p$Continuous
 A function `session` stored in an object in the `Hmisc` package prints the current computing environment in a nice format.
 
 `r markupSpecs$html$session()`
+
